# kaggle_practice

./: .env.example  .gitignore  Makefile  README.md  build_python_env.sh  gcp_startup_script.sh  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
docs/: How_to_build_gcp_env.md
mikasa/: README.md  fold.py  io.py  mlflow_writer.py  plot.py
mikasa/client/: gcp.py
mikasa/common/: __init__.py
mikasa/ensemble/: __init__.py
mikasa/preprocessing/: __init__.py
mikasa/trainer/: base.py  cross_validation.py  gbdt.py  nn.py
mikasa/trainer/tests/: test_tabnet.py
mlruns/1/: meta.yaml
mlruns/1/0535ea597ac143d8ba008cd46d2cadf6/: meta.yaml
mlruns/1/2215aae2eb514c839548f8d0b4f31d73/: meta.yaml
mlruns/1/250b878c158f44c2b98772aa844f28c1/: meta.yaml
mlruns/1/4383c3c159d54ff2aeebef3c3d076c1a/: meta.yaml
mlruns/1/443c082db0c54f3aa0de0b8b62119a3d/: meta.yaml
notebook/titanic/: auto_weight_ensemble.ipynb  groupby_features.ipynb
riiid_answer_correctness_prediction/: README.md
riiid_answer_correctness_prediction/src/: cvsplit.py  preprocess.py  utils.py
tests/: helpers.py
tests/trainer/: test_cross_validation.py  test_gbdt.py  test_nn.py  test_sklearn.py  test_sklearn_trainer.py  testconf.py
titanic/: README.md  config.py  create_feature.py  submission.py  temp.py  train.py
titanic/notebook/: check_null_mean.ipynb  eda.ipynb
titanic/src/: config.py  main.py  preprocess.py  submission.py  train.py
(+405 files in other folders)
