[tool.poetry]
name = "kaggle_practice"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.0"
numpy = "^1.19.4"
lightgbm = "^3.1.1"
xgboost = "^1.3.1"
catboost = "^0.24.4"
torch = "^1.7.1"
pytorch-tabnet = "^3.0.0"
kaggle = "^1.5.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
