[tool.poetry]
name = "kaggle_practice"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.0"
numpy = "^1.19.4"
lightgbm = "^3.1.1"
xgboost = "^1.3.1"
catboost = "^0.24.4"
torch = "^1.7.1"
pytorch-tabnet = "^3.0.0"
kaggle = "^1.5.10"
google-cloud-storage = "^1.35.0"
google-cloud-bigquery = "^2.6.1"
mlflow = "^1.13.1"
hydra-core = "^1.0.5"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
jupyterlab = "^3.0.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
